# Expresly

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  README.md  ShuntingYard.md  premake5.lua
expresly/: premake5.lua
expresly/include/: calculate.h  expresly.h  expression.h  options.h  token.h  types.h
expresly/include/exceptions/: empty_expression.h  invalid_token.h  mismatched_paretheses.h
expresly/include/expresly/: exceptions.h  expression.h  lexer.h  options.h  token.h
expresly/include/expresly/exceptions/: bad_cast.h  mismatched_paretheses.h
expresly/include/expresly/tokens/: function.h  number.h  operator.h  packed_token.h  sum.h  token.h
expresly/src/: calculate.cpp  expression.cpp  lexer.cpp  options.cpp  token.cpp
himod/: premake5.lua
himod/include/: cApp.h  cMain.h
himod/src/: cApp.cpp  cMain.cpp
include/: Formula.h  expresly.h  options.h  test.h  token.h
src/: CMakeLists.txt  main.cpp  options.cpp
tests/: CMakeLists.txt  expresly-test.cpp  premake5.lua
tests/src/: expresly-test.cpp  expression-test.cpp  lexer-test.cpp  token-test.cpp
